# FaceCommander

./: .gitignore  FaceCommander.py  README.md  build-portable.spec  build-signed.spec  build-unsigned.spec  build.spec  build_executable.bat  build_face_commander.spec  developer.md  face_commander.py  here.code-workspace  installer.iss  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml  release.yml  windows-build-release.yml  windows-build-version.yml
Developer/: ReleaseAndSignDeveloperGuide.md  UpdateManagerDeveloperGuide.md  VersionNumberDeveloperGuide.md  readme.md
assets/: Version.ini
assets/web/: about.css  about.html
src/: app.py  camera_manager.py  config_manager.py  pipeline.py  shape_list.py  task_killer.py  update_manager.py
src/controllers/: __init__.py  keybinder.py  mouse_controller.py
src/detectors/: facemesh.py
src/gui/: dropdown.py  main_gui.py  select_binding_type.py  select_facial_gesture.py
src/gui/frames/: frame_cam_preview.py  frame_menu.py  frame_profile.py  frame_profile_editor.py  frame_profile_switcher.py
src/gui/pages/: __init__.py  page_about.py  page_cursor.py  page_keyboard.py  page_select_camera.py  page_select_gestures.py  page_setting.py
src/utils/: printversion.py  readini.py
